[gd_scene load_steps=10 format=3 uid="uid://ddiha2u3vtvio"]

[ext_resource type="Script" path="res://scripts/pot.gd" id="1_ral8f"]
[ext_resource type="Texture2D" uid="uid://be6c1d41fdxsi" path="res://textures/stove_idle.png" id="3_1hgip"]
[ext_resource type="Texture2D" uid="uid://btcrjypjmr6ip" path="res://textures/stove.png" id="4_qpetx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2voae"]
size = Vector2(123, 122)

[sub_resource type="Gradient" id="Gradient_umaf8"]
colors = PackedColorArray(1, 1, 1, 0.576471, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_drxom"]
gradient = SubResource("Gradient_umaf8")

[sub_resource type="Curve" id="Curve_mpu3v"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.575472, 0.853226), -0.816799, -0.816799, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_qgli3"]
curve = SubResource("Curve_mpu3v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5a3ei"]
particle_flag_disable_z = true
angle_min = -425.9
angle_max = -170.6
spread = 106.182
angular_velocity_min = -14.2
angular_velocity_max = 14.18
gravity = Vector3(0, -98, 0)
scale_min = 9.86
scale_max = 24.63
scale_curve = SubResource("CurveTexture_qgli3")
color_ramp = SubResource("GradientTexture1D_drxom")
turbulence_enabled = true
turbulence_noise_strength = 3.76
turbulence_noise_speed_random = 0.18

[node name="pot" type="Node2D"]
script = ExtResource("1_ral8f")
cooking_texture = ExtResource("4_qpetx")
idle_texture = ExtResource("3_1hgip")

[node name="sprite" type="Sprite2D" parent="."]
z_index = 10
z_as_relative = false
scale = Vector2(0.581191, 0.582677)
texture = ExtResource("3_1hgip")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = -99.0
offset_right = 45.0
offset_bottom = -50.0
scale = Vector2(1, 0.76)
mouse_filter = 2

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.449
one_shot = true

[node name="StatusLabel" type="Label" parent="."]
offset_left = -91.0
offset_top = -11.0
offset_right = -51.0
offset_bottom = 12.0

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2voae")

[node name="Smoke" type="Node2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="Smoke"]
z_index = 11
position = Vector2(-30, -42)
emitting = false
amount = 3
amount_ratio = 0.5295
process_material = SubResource("ParticleProcessMaterial_5a3ei")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Smoke"]
z_index = 11
position = Vector2(31, -31)
emitting = false
amount = 3
amount_ratio = 0.637
process_material = SubResource("ParticleProcessMaterial_5a3ei")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="Smoke"]
z_index = 11
position = Vector2(3, -52)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_5a3ei")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
